2020-04-02-alpine基础镜像使用过程中的注意事项.md

--- a/_posts/2020-04-02-alpine基础镜像使用过程中的注意事项.md
+++ b/_posts/2020-04-02-alpine基础镜像使用过程中的注意事项.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      Alpine基础镜像使用过程的注意事项
-subtitle:   简单记录一下使用 Apline 作为基础镜像时可能会遇到的常见问题的解决方法
+subtitle:   简单记录一下使用 Alpine 作为基础镜像时可能会遇到的常见问题的解决方法
 date:       2020-04-02
 author:     J
 catalog: true
